force-app/main/default/objects/Student_Programs__c/Student_Programs__c.object-meta.xml
<CustomObject>
    <label>Student Program</label>
    <nameField>
        <displayFormat>SP-{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Programs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>