force-app/main/default/objects/Student_Programs__c/fields/Account_Program__c.field-meta.xml
<CustomField>
    <fullName>Account_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Program</label>
    <referenceTo>Account_Program__c</referenceTo>
    <relationshipLabel>Student Programs</relationshipLabel>
    <relationshipName>Student_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>