force-app/main/default/objects/Student_Programs__c/fields/Active_In_Program__c.field-meta.xml
<CustomField>
    <fullName>Active_In_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active In Program</label>
    <type>Checkbox</type>
</CustomField>