force-app/main/default/objects/Student_Programs__c/fields/Best_Method_of_Communication__c.field-meta.xml
<CustomField>
    <fullName>Best_Method_of_Communication__c</fullName>
    <label>Best Method of Communication</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All - Great communicator</fullName>
            </value>
            <value>
                <fullName>Brandscopic</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Email or Phone</fullName>
            </value>
            <value>
                <fullName>GroupMe</fullName>
            </value>
            <value>
                <fullName>Neither</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Teams</fullName>
            </value>
            <value>
                <fullName>Slack</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>