force-app/main/default/objects/Student_Programs__c/fields/Communication_Notes__c.field-meta.xml
<CustomField>
    <fullName>Communication_Notes__c</fullName>
    <label>Communication Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>