force-app/main/default/objects/Student_Programs__c/fields/Delivery_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Instructions__c</fullName>
    <label>Delivery Instructions</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>