force-app/main/default/objects/Student_Programs__c/fields/Eligible_for_rehire__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_rehire__c</fullName>
    <label>Eligible for rehire?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Definitely</fullName>
            </value>
            <value>
                <fullName>Very likely</fullName>
            </value>
            <value>
                <fullName>Indecisive</fullName>
            </value>
            <value>
                <fullName>Consider other options</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Recommend for a different program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>