force-app/main/default/objects/Student_Programs__c/fields/Employment_Length__c.field-meta.xml
<CustomField>
    <fullName>Employment_Length__c</fullName>
    <inlineHelpText>Length of employment, in weeks.</inlineHelpText>
    <label>Employment Length</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>