force-app/main/default/objects/Student_Programs__c/fields/Instagram_Rating__c.field-meta.xml
<CustomField>
    <fullName>Instagram_Rating__c</fullName>
    <inlineHelpText>0 - N/A
1 - Below Average - meets bare min. of expectations
2 - Good - Meets Expectations
3 - Great - Exceeds Expectations</inlineHelpText>
    <label>Instagram Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>