force-app/main/default/objects/Student_Programs__c/fields/Instagram_Rating_Notes__c.field-meta.xml
<CustomField>
    <fullName>Instagram_Rating_Notes__c</fullName>
    <label>Instagram Rating Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>