force-app/main/default/objects/Student_Programs__c/fields/Opportunity_Created_From__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Created_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Created From</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Student Programs</relationshipLabel>
    <relationshipName>Student_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>