force-app/main/default/objects/Student_Programs__c/fields/Pants_Size__c.field-meta.xml
<CustomField>
    <fullName>Pants_Size__c</fullName>
    <label>Pants Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>X-Small</fullName>
            </value>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>X-Large</fullName>
            </value>
            <value>
                <fullName>XX-Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>