force-app/main/default/objects/Student_Programs__c/fields/PayPal_Email__c.field-meta.xml
<CustomField>
    <fullName>PayPal_Email__c</fullName>
    <label>non.edu Email</label>
    <type>Email</type>
</CustomField>