force-app/main/default/objects/Student_Programs__c/fields/Program_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Program_Bonus__c</fullName>
    <label>Program Bonus</label>
    <length>20</length>
    <type>Text</type>
</CustomField>