force-app/main/default/objects/Student_Programs__c/fields/Program_Drop_Date__c.field-meta.xml
<CustomField>
    <fullName>Program_Drop_Date__c</fullName>
    <label>Program Drop Date</label>
    <type>Date</type>
</CustomField>