force-app/main/default/objects/Student_Programs__c/fields/Program_Drop_Reason__c.field-meta.xml
<CustomField>
    <fullName>Program_Drop_Reason__c</fullName>
    <inlineHelpText>Field is mandatory to be filled when Student drops</inlineHelpText>
    <label>Program Drop Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fired from Program</fullName>
            </value>
            <value>
                <fullName>Non-Responsive</fullName>
            </value>
            <value>
                <fullName>Can no longer commit due to personal life reasons</fullName>
            </value>
            <value>
                <fullName>Can no longer commit due to workload</fullName>
            </value>
            <value>
                <fullName>Can no longer commit based on program responsibilities</fullName>
            </value>
            <value>
                <fullName>Campus policies prevent students from completing requirements</fullName>
            </value>
            <value>
                <fullName>Contractual dispute</fullName>
            </value>
            <value>
                <fullName>Working for a competitor program</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>