force-app/main/default/objects/Student_Programs__c/fields/Program_Shipping_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Program_Shipping_State_Province__c</fullName>
    <label>Program Shipping State / Province</label>
    <length>80</length>
    <type>Text</type>
</CustomField>