force-app/main/default/objects/Student_Programs__c/fields/Program_Shipping_Street_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Program_Shipping_Street_Address_2__c</fullName>
    <label>Program Shipping Street Address 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>