force-app/main/default/objects/Student_Programs__c/fields/Program_Shipping_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Program_Shipping_Zip_Code__c</fullName>
    <label>Program Shipping Zip Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>