force-app/main/default/objects/Student_Programs__c/fields/Recruiting__c.field-meta.xml
<CustomField>
    <fullName>Recruiting__c</fullName>
    <label>Recruiting_Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>