force-app/main/default/objects/Student_Programs__c/fields/Sock_Size__c.field-meta.xml
<CustomField>
    <fullName>Sock_Size__c</fullName>
    <label>Sock Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>X-Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>