force-app/main/default/objects/Student_Programs__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hired to program</fullName>
            </value>
            <value>
                <fullName>Dropped from program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>