force-app/main/default/objects/Student_Programs__c/fields/TikTok_Rating_Notes__c.field-meta.xml
<CustomField>
    <fullName>TikTok_Rating_Notes__c</fullName>
    <label>TikTok Rating Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>