force-app/main/default/objects/Student_Programs__c/fields/Training_Week_Of__c.field-meta.xml
<CustomField>
    <fullName>Training_Week_Of__c</fullName>
    <label>Training Week Of</label>
    <type>Date</type>
</CustomField>