force-app/main/default/objects/Student_Programs__c/fields/W_9_on_file__c.field-meta.xml
<CustomField>
    <fullName>W_9_on_file__c</fullName>
    <defaultValue>false</defaultValue>
    <label>W-9 on file?</label>
    <type>Checkbox</type>
</CustomField>