force-app/main/default/objects/Student_Programs__c/fields/What_swag_items_would_you_be_interested__c.field-meta.xml
<CustomField>
    <fullName>What_swag_items_would_you_be_interested__c</fullName>
    <label>What swag items would you be interested</label>
    <type>TextArea</type>
</CustomField>