force-app/main/default/objects/Student_Programs__c/fields/What_type_of_housing_building_is_this__c.field-meta.xml
<CustomField>
    <fullName>What_type_of_housing_building_is_this__c</fullName>
    <label>What type of housing building is this</label>
    <length>255</length>
    <type>Text</type>
</CustomField>