force-app/main/default/objects/Student_Programs__c/validationRules/Program_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Program_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c, &apos;Dropped from Program&apos;) &amp;&amp;
 ISBLANK( Program_Drop_Date__c)</errorConditionFormula>
    <errorDisplayField>Program_Drop_Date__c</errorDisplayField>
    <errorMessage>Please fill in Program Drop Date</errorMessage>
</ValidationRule>