force-app/main/default/objects/Student_Programs__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Program__c</columns>
    <columns>School__c</columns>
    <columns>Account_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program__c</field>
        <operation>equals</operation>
        <value>Fall 2022 Prime Student Brand Ambassador Program</value>
    </filters>
    <label>All</label>
</ListView>