force-app/main/default/objects/Student_Programs__c/listViews/Welcome_Email_Status.listView-meta.xml
<ListView>
    <fullName>Welcome_Email_Status</fullName>
    <columns>NAME</columns>
    <columns>Account_Manager__c</columns>
    <columns>Account_Program__c</columns>
    <columns>Employment_Start_Date__c</columns>
    <columns>Program__c</columns>
    <columns>School__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program__c</field>
        <operation>equals</operation>
        <value>Fall 2022 Prime Student Brand Ambassador Program</value>
    </filters>
    <label>Welcome Email Status</label>
</ListView>